fixed layout issue on mobile device

--- a/src/Components/Facts/Facts.css
+++ b/src/Components/Facts/Facts.css
@@ -26,7 +26,7 @@
 .year {
     color: blue;
     transform: translateY(-38%);
-    padding: 0 23px;
+    padding-left: 14px;
 
 }
 
@@ -35,7 +35,6 @@
 }
 
 .timeline-component {
-    padding: 10px;
     margin-bottom: 20px;
 
 }
@@ -43,7 +42,7 @@
 .timeline-fact {
     max-width: 90%;
     margin-top: 20px;
-    padding: 0 10px;
+    padding-left: 10px;
 }
 
 .timeline-fact h2 {
@@ -100,18 +99,18 @@
 
 @media (max-width: 426px) {
     .timeline-fact p {
-        width: 360px;
+        width: 330px;
         font-size: 14px;
     }
 
     .fact-image .img {
-        width: 360px;
+        width: 330px;
         height: 300px;
     }
 
     .title {
-        width: 341px;
-        font-size: 14px;
+        width: 311px;
+        font-size: 9px;
     }
 
     .timeline {
